# pokopia-link

./: .gitignore  Cargo.toml  LICENSE  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
docs/: index.md
docs/api/: commands.md  zerotier.md
src/link.main/: Cargo.toml  build.rs  tauri.conf.json
src/link.main/capabilities/: default.json
src/link.main/src/: commands.rs  discord.rs  lib.rs  main.rs  tray.rs
src/link.ui/: App.tsx  app.css
src/link.ui/components/layout/: TabBar.tsx  TitleBar.tsx
src/link.ui/components/shared/: FloatWidget.tsx  SetupWizard.tsx  StatusBadge.tsx  Toast.tsx
src/link.ui/hooks/: useAuth.ts  useAutostart.ts  useDiscord.ts  usePingMonitor.ts  usePolling.ts  useRoom.ts  useZeroTierEnv.ts  useZeroTierStatus.ts
src/link.ui/pages/: Devices.tsx  Hotspot.tsx  Monitor.tsx  Overview.tsx  Room.tsx  Settings.tsx
src/link.ui/stores/: useAppStore.ts
src/link.ui/types/: index.ts
