[package]
name = "pokopia-link"
version = "0.1.0"
description = "Nintendo Switch GameShare Cross-Location Connection Manager"
authors = ["Foy Liu"]
edition = "2021"

[lib]
name = "pokopia_link_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
discord-rich-presence = "0.2"
windows = { version = "0.61", features = [
    "Networking_NetworkOperators",
    "Networking_Connectivity",
    "Foundation",
] }
